Bug 477494 - "Show alternatives..." menu includes any widget installed from KDE Store
Summary: "Show alternatives..." menu includes any widget installed from KDE Store
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Widget Explorer sidebar (other bugs)
Version First Reported In: 5.27.80
Platform: Neon Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-25 11:28 UTC by Patrick Silva
Modified: 2023-11-25 21:55 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
widgets installed from KDE Store (921.89 KB, image/png)
2023-11-25 11:29 UTC, Patrick Silva
Details
"Show alternatives..." menu (888.45 KB, image/png)
2023-11-25 11:30 UTC, Patrick Silva
Details
"Show alternatives..." menu 2 (891.33 KB, image/png)
2023-11-25 11:33 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-11-25 11:28:29 UTC
STEPS TO REPRODUCE
1. install some widget(s) from KDE Store
2. right-click on Kickoff icon, or Task Manager, or Digital Clock and choose "Show alternatives..."
3. 

OBSERVED RESULT
"Show alternatives" menu includes widget(s) installed in the step 1, even if it/them is/are not related to Kickoff, Task Manager, Digital Clock. Please see the attached screenshots.

EXPECTED RESULT
"Show alternatives" menu should only include widgets from kde store related to kickoff, task manager and Digital Click

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.81.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Patrick Silva 2023-11-25 11:29:24 UTC
Created attachment 163455 [details]
widgets installed from KDE Store
Comment 2 Patrick Silva 2023-11-25 11:30:24 UTC
Created attachment 163456 [details]
"Show alternatives..." menu
Comment 3 Patrick Silva 2023-11-25 11:33:55 UTC
Created attachment 163458 [details]
"Show alternatives..." menu 2
Comment 4 Bug Janitor Service 2023-11-25 15:55:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/3600
Comment 5 Nate Graham 2023-11-25 21:55:26 UTC
Git commit 5e37e61977da56243af57c0f36da8611f1b014a2 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 25/11/2023 at 22:55.
Pushed by ngraham into branch 'master'.

Filter out legacy Plasma 5 applets

If Plasma 5 applets are not filtered they will be added in places where
they shouldn't, such as in unrelated alternatives dialogs.

M  +4    -3    components/shellprivate/widgetexplorer/plasmaappletitemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/5e37e61977da56243af57c0f36da8611f1b014a2