Filter out legacy Plasma 5 applets

If Plasma 5 applets are not filtered they will be added in places where
they shouldn't, such as in unrelated alternatives dialogs.

BUG: 477494